--- a/src/main/index.css
+++ b/src/main/index.css
@@ -11,7 +11,7 @@
 }
 
 #body {
-  height: 100%;
+  height: 100vh;
   width: 1024px;
   margin: 0 auto;
   padding-bottom: 24px;
@@ -79,12 +79,14 @@
 
 .product-name {
   font-size: 14px;
+  margin-left: 6px;
 }
 
 .product-price {
   font-size: 16px;
   font-weight: 600;
   margin-top: 5px;
+  margin-left: 6px;
 }
 
 .product-seller {
@@ -95,4 +97,9 @@
 
 .product-avatar {
   width: 24px;
+}
+
+.product-link {
+  color: inherit;
+  text-decoration: none;
 }
