--- a/src/product/index.css
+++ b/src/product/index.css
@@ -1,12 +1,14 @@
 #image-box {
-  height: 300px;
+  max-height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #image-box > img {
-  height: 100%;
+  width: 100%;
+  max-height: 300px;
+  object-fit: contain;
 }
 
 #profile-box {
@@ -47,5 +49,11 @@
   color: rgb(204, 204, 204);
 }
 #description {
-  margin-top: 16px;
+  margin-top: 12px;
+  font-size: 16px;
+}
+
+#purchase-button {
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
